helm/ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: sample-api-ingress
#  namespace: sample-api
#  labels:
#    app.kubernetes.io/name: sample-api
#    app.kubernetes.io/component: system
#  annotations:
#    kubernetes.io/ingress.class: nginx
#    kubernetes.io/name: sample-api
#    ingress.kubernetes.io/rewrite-target: /
#spec:
#  rules:
#    - http:
#        paths:
#          - path: /system
#            pathType: Prefix
#            backend:
#              service:
#                name: system
#                port:
#                  number: 80
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  namespace: sample-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: system.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: system
                port:
                  number: 80

---

apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: ingress
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  #loadBalancerIP: <<LOAD BALANCER IP HERE>>
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
#    - name: https
#      protocol: TCP
#      port: 443
#      targetPort: 443
