helm/system.api.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-api
  annotations:
    argocd.argoproj.io/sample-api: "-1"
    app.kubernetes.io/name: sample-api
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: system
  namespace: sample-api
  labels:
    app: system
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: system
  template:
    metadata:
      labels:
        app: system
    spec:
      containers:
        - name: system
          image: docker.io/deadlychambers/soinshane-k8s-system:1.0.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi

---

apiVersion: v1
kind: Service
metadata:
  name: system-service
  namespace: sample-api
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: system

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: system-ingress
  namespace: sample-api
  labels:
    app: system-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/name: sample-api
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /system
            pathType: Prefix
            backend:
              service:
                name: system-service
                port:
                  number: 80
